--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -15,6 +15,17 @@
     } ],
     "operation" : "toast"
   },
+  "goToPage_editpage" : {
+    "_id" : "wm-goToPage_editpage-wm.NavigationVariable-1550100298136",
+    "name" : "goToPage_editpage",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "editpage",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_Main" : {
     "_id" : "wm-wm.NavigationVariable1389180517517",
     "name" : "goToPage_Main",
