--- a/profiles/deployment.properties
+++ b/profiles/deployment.properties
@@ -1,3 +1,9 @@
+app.environment.authentication=true
+app.environment.host=sdfsdf
+app.environment.password=BFTRO8jRCzcAsVe9AroZlnEb2vuCkhrm2JmdpA56sokt
+app.environment.port=sdfsdf
+app.environment.smtpServerTTLSEnabled=true
+app.environment.username=sdfsdf
 app.proxy.enabled=false
 app.proxy.host=
 app.proxy.password=
