--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,4 +1,10 @@
-#Tue Feb 12 01:05:07 UTC 2019
+#Thu Feb 14 17:45:28 UTC 2019
+app.environment.authentication=${app.environment.authentication}
+app.environment.host=${app.environment.host}
+app.environment.password=${app.environment.password}
+app.environment.port=${app.environment.port}
+app.environment.smtpServerTTLSEnabled=${app.environment.smtpServerTTLSEnabled}
+app.environment.username=${app.environment.username}
 app.proxy.enabled=${app.proxy.enabled}
 app.proxy.host=${app.proxy.host}
 app.proxy.password=${app.proxy.password}
