--- a/profiles/development.properties
+++ b/profiles/development.properties
@@ -1,4 +1,5 @@
 app.environment.authentication=true
+app.environment.host=email-smtp.us-east-1.amazonaws.com
 app.environment.password=BFTRO8jRCzcAsVe9AroZlnEb2vuCkhrm2JmdpA56sokt
 app.environment.smtpServerTTLSEnabled=true
 app.environment.username=AKIAJKGNXTTNBVOK3P4A
